# docs/swagger.yaml
@@ -378,6 +378,27 @@ paths:
       summary: List all available SGX reports
       tags:
       - analytics
+  /api/v1/analytics/list_analysis:
+    get:
+      consumes:
+      - application/json
+      description: Lists all analysis reports that were previously stored in the database
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of analysis reports
+          schema:
+            items:
+              $ref: '#/definitions/analytics.ReportAnalysis'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      summary: List all available analysis reports
+      tags:
+      - analytics
   /api/v1/blotter/export:
     get:
       description: Export all trades to a CSV file
